hopefully fixed the overflow issue with the name of each product on the product page

--- a/client/src/components/ProductDescription.scss
+++ b/client/src/components/ProductDescription.scss
@@ -58,6 +58,7 @@
     width: auto;
     color: black;
     margin-left: 5%;
+    overflow-x: visible;
 }
 
 .price{
